--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ Layout Styles
   padding: 15px;
   vertical-align: baseline;
   margin: auto;
-  display: block;
 }
 
 .name {
@@ -51,13 +50,23 @@ Layout Styles
   max-width: 240px;
   margin: 0;
   text-align: left;
-  display: inline-block;
+  padding: 0;
+  display: inline;
+  margin: 0 auto;
+
 }
 
 .main-nav {
   padding: 0;
-  display: inline;
   margin: 0 auto;
+  background: deepbluesky;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: flex-end;
+  width: auto;
 }
 
 .main-nav li {
@@ -77,6 +86,26 @@ Layout Styles
 }
 a:visited {
   color: #2a64f8;
+}
+
+.second-nav {
+  padding: 0;
+  margin: 0 auto;
+  background: deepbluesky;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  justify-content: flex-start;
+  width: auto;
+}
+
+.second-nav li {
+  text-align: center;
+  display: inline-block;
+  padding: 0 2.5%;
+  text-transform: uppercase;
 }
 
 
@@ -109,7 +138,7 @@ a:visited {
 .logo {
   min-width: 30%;
   max-width: 125px;
-  display: inline-block;
+  display: inline;
   padding: 0 5%;
 }
 .headline {
